Add Static.js placeholder

--- a/src/App.css
+++ b/src/App.css
@@ -44,3 +44,14 @@
 .ui.inline.scrolling.dropdown > div.text {
   font-weight: 400;
 }
+
+#tv {
+  position: absolute;
+  top: 0;
+  left: 0;
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+  -webkit-backface-visibility: hidden;
+  -webkit-perspective: 1000;
+}
